add messages.html, notify.html + upd

--- a/site/equipments-item-user.html
+++ b/site/equipments-item-user.html
@@ -386,6 +386,10 @@
         </div>
         <div class="main-left">
           <div class="box-text-item">
+            <ul class="admin-box">
+              <li class="admin-edit"></li>
+              <li class="admin-delete"></li>
+            </ul>
             <div class="bmeta">
               <div class="date">19 сентября 2014 года</div>
               <div class="comments"><a href="#">61</a></div>
@@ -394,12 +398,8 @@
             <div class="bcon bcon-text-style">
               <div class="event-item mar-bot-30">
                 <div class="icon">
-                  <h1>ЗАО «Научно-производственный центр “Модуль”»</h1>
-                  <div class="graph-name">Рейтинг НТП 73 %</div>
-                  <div class="graph-box graph-box_mwidth">
-                    <div style="width:73%;" class="graph-inner"></div>
-                  </div>
-                  <div class="irating irating_margin">
+                  <h1 class="service-title">Станок токарный с ЧПУ</h1>
+                  <div class="irating mar-bot-10 irating-service"><span>DELTAMAB 400</span>
                     <ul>
                       <li class="star"></li>
                       <li class="star"></li>
@@ -408,17 +408,19 @@
                       <li></li>
                     </ul>
                   </div>
+                  <div class="tags"><a href="#" class="tags-item js-open-coming-soon"><span class="name">Машиностроение</span><span class="count empty"></span></a><a href="#" class="tags-item js-open-coming-soon"><span class="name">Металлообработка</span><span class="count">388</span></a></div>
                 </div>
-                <div class="iprev"><img src="img/content/120-85-1.jpg" alt=""></div>
-                <p class="grey">
-                  Оборудование: 78% <br>
-                  Услуги: 67% <br>
-                  Программное обеспечние: 68% <br> 
-                  Результаты интеллектуальной деятельности: 64% <br>
-                </p>
-                <p><strong>Вид деятельности: </strong>проведение исследований, измерение <br><strong>Расположение: </strong>Московская область, Протвино <br><strong>Контакты: </strong>email@email.com, +7 495 675 87 98</p>
-                <div class="inline"><a href="#" class="btn-orange btn-orange-bigm">Свзяаться</a></div>
+                <div class="iprev"><img src="img/content/equip-1.jpg" alt=""></div>
               </div>
+              <p class="grey-without-strong"><strong>Назначение <br></strong>Изготовление деталей типа тел вращения</p>
+              <p class="grey-without-strong"><strong>Описание <br></strong>Прецизионный токарный станок с ЧПУ выполнен по прогрессивной схеме компоновки с расположением револьверной головки на наклонных направляющих, что увеличивает жесткость конструкции, позволяет уменьшить размеры станка по ширине и оптимально распределить по направляющим нагрузки, образующиеся в процессе резания.</p>
+              <p class="grey-without-strong"><strong>Основные характеристики <br></strong>Наибольший диаметр обрабатываемого изделия – 600 мм <br>Число управляемых координат – 2</p>
+              <p class="grey-without-strong"><strong>Год выпуска: </strong>2012</p>
+              <p class="grey-without-strong"><strong>Производитель:</strong>SOMAB, Франция</p>
+              <p class="grey-without-strong"><strong>Организация (ВУЗ / ГНЦ): </strong>Национальный исследовательский Томский политехнический университет</p>
+            </div>
+            <div class="order-service-cont"><a href="#" class="btn-orange inline js-open-coming-soon">Заказать</a><a href="#" class="btn-grey-dashed js-show-contacts">Показать контакты</a>
+              <div class="contacts js-contacts-box"><span class="phone">+7 495 675 87 98</span><span class="email"><a href="#">email@email.com</a></span></div>
             </div>
             <div class="bmetabot">
               <div class="share"><span>Поделиться</span>
@@ -433,29 +435,15 @@
             </div>
             <div class="box-interest">
               <div class="bname">
-                <h3>Похожие рекомендации</h3>
+                <h3>Похожее оборудование</h3>
               </div>
               <div class="bcon">
                 <div class="box-articles m-mod">
-                  <div class="item-3col">
-                    <div class="iprev"><img src="img/content/120-85-2.jpg" alt=""></div>
+                  <div class="item">
+                    <div class="iprev"><img src="img/content/equip-1.jpg" alt=""></div>
                     <div class="icon">
-                      <div class="iname"><a href="#">Московский государственный университет им. М.В.Ломоносова</a></div>
-                      <div class="itext lh-small">
-                        <p>
-                          Оборудование: 78% <br>
-                          Услуги: 67% <br>
-                          Программное обеспечние: 68% <br> 
-                          Результаты интеллектуальной деятельности: 64% <br>
-                        </p><a href="#" class="btn-orange-empty">Связаться</a>
-                      </div>
-                    </div>
-                    <div class="iconright">
-                      <div class="graph-name">Рейтинг НТП 98 %</div>
-                      <div class="graph-box">
-                        <div style="width:98%;" class="graph-inner"></div>
-                      </div>
-                      <div class="irating irating_margin">
+                      <div class="iname"><a href="#">Станок токарный с ЧПУ</a></div>
+                      <div class="irating mar-bot-10"><span>DELTAMAB 400</span>
                         <ul>
                           <li class="star"></li>
                           <li class="star"></li>
@@ -464,31 +452,25 @@
                           <li></li>
                         </ul>
                       </div>
+                      <div class="itext lh-small">
+                        <p>Изготовление деталей типа тел вращения</p>
+                        <p> <strong class="reg-black">Организация (ВУЗ / ГНЦ): </strong>ООО «Лаборатории АМФОРА»</p>
+                      </div>
+                      <div class="tags"><a href="#" class="tags-item js-open-coming-soon"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
+                      <div class="order-service"><a href="#" class="btn-orange">Заказать</a></div>
                       <div class="imeta">
-                        <div class="comments"><a href="#">51</a></div>
-                        <div class="views"><a href="#">225</a></div>
+                        <div class="right mar-top-20m">
+                          <div class="comments"><a href="#">51</a></div>
+                          <div class="views"><a href="#">225</a></div>
+                        </div>
                       </div>
                     </div>
                   </div>
-                  <div class="item-3col">
-                    <div class="iprev"><img src="img/content/120-85-1.jpg" alt=""></div>
+                  <div class="item">
+                    <div class="iprev"><img src="img/content/equip-2.jpg" alt=""></div>
                     <div class="icon">
-                      <div class="iname"><a href="#">Санкт-Петербургский государственный университет аэрокосмического приборостроения</a></div>
-                      <div class="itext lh-small">
-                        <p>
-                          Оборудование: 78% <br>
-                          Услуги: 67% <br>
-                          Программное обеспечние: 68% <br> 
-                          Результаты интеллектуальной деятельности: 64% <br>
-                        </p><a href="#" class="btn-orange-empty">Связаться</a>
-                      </div>
-                    </div>
-                    <div class="iconright">
-                      <div class="graph-name">Рейтинг НТП 53 %</div>
-                      <div class="graph-box">
-                        <div style="width:53%;" class="graph-inner"></div>
-                      </div>
-                      <div class="irating irating_margin">
+                      <div class="iname"><a href="#">Станок токарный с ЧПУ</a></div>
+                      <div class="irating mar-bot-10"><span>DELTAMAB 400</span>
                         <ul>
                           <li class="star"></li>
                           <li class="star"></li>
@@ -497,9 +479,17 @@
                           <li></li>
                         </ul>
                       </div>
+                      <div class="itext lh-small">
+                        <p>Изготовление деталей типа тел вращения</p>
+                        <p> <strong class="reg-black">Организация (ВУЗ / ГНЦ): </strong>ООО «Лаборатории АМФОРА»</p>
+                      </div>
+                      <div class="tags"><a href="#" class="tags-item"><span class="name">Выставки</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count empty"></span></a></div>
+                      <div class="order-service"><a href="#" class="btn-orange">Заказать</a></div>
                       <div class="imeta">
-                        <div class="comments"><a href="#">51</a></div>
-                        <div class="views"><a href="#">225</a></div>
+                        <div class="right mar-top-20m">
+                          <div class="comments"><a href="#">51</a></div>
+                          <div class="views"><a href="#">225</a></div>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -589,83 +579,34 @@
           </div>
         </div>
         <div class="main-right">
-          <div class="box-news box-right box-news_dotted">
+          <div class="box-right boxside-sort-cat">
             <div class="bname">
-              <h3> <a href="#">Популярное оборудование</a></h3>
+              <h3> <a href="#">ОБЛАСТИ ПРИМЕНЕНИЯ</a></h3>
             </div>
             <div class="bcon">
-              <div class="item">
-                <div class="iname"> <a href="#">Выставка научного оборудования НИИ спорта РГУФКСМиТ</a></div>
-                <div class="irating mar-bot-10"><span>EBV-23</span>
-                  <ul>
-                    <li class="star"></li>
-                    <li class="star"></li>
-                    <li class="star"></li>
-                    <li></li>
-                    <li></li>
-                  </ul>
-                </div>
-                <div class="itext">10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования. <br></div>
-                <div class="itext-ext"><span class="dark">Организация (ВУЗ / ГНЦ): </span><a href="#">Национальный исследовательский Томский политехнический университет</a></div>
-                <div class="tags"><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Металлообработка</span><span class="count empty"></span></a></div>
-              </div>
-              <div class="item">
-                <div class="iprev"><img src="img/content/equip-2.jpg" alt=""></div>
-                <div class="iname"> <a href="#">Станок токарный с ЧПУ</a></div>
-                <div class="irating mar-bot-10"><span>EBV-23</span>
-                  <ul>
-                    <li class="star"></li>
-                    <li class="star"></li>
-                    <li class="star"></li>
-                    <li></li>
-                    <li></li>
-                  </ul>
-                </div>
-                <div class="itext">10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования. <br></div>
-                <div class="itext-ext"><span class="dark">Организация (ВУЗ / ГНЦ): </span><a href="#">Национальный исследовательский Томский политехнический университет</a></div>
-                <div class="tags"><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Металлообработка</span><span class="count empty"></span></a></div>
-              </div>
+              <ul>
+                <li class="selected"><a href="#">Авиация и космос (10)</a></li>
+                <li><a href="#">Безопасность (17)</a></li>
+                <li><a href="#">Бизнес-консалтинг (1)</a></li>
+                <li><a href="#">Биотехнологии и медицина (25)</a></li>
+                <li><a href="#">Власть (31)</a></li>
+                <li><a href="#">Добыча полезных ископаемых (4)</a></li>
+                <li class="selected"><a href="#">ЖКХ (3)</a></li>
+                <li><a href="#">Бизнес-консалтинг (1)</a></li>
+                <li><a href="#">Биотехнологии и медицина (25)</a></li>
+                <li><a href="#">Власть (31)</a></li>
+                <li><a href="#">Добыча полезных ископаемых (4)</a></li>
+                <li class="selected"><a href="#">ЖКХ (3)</a></li>
+                <li><a href="#">Безопасность (17)</a></li>
+                <li><a href="#">Бизнес-консалтинг (1)</a></li>
+                <li><a href="#">Биотехнологии и медицина (25)</a></li>
+                <li><a href="#">Власть (31)</a></li>
+                <li><a href="#">Добыча полезных ископаемых (4)</a></li>
+                <li class="selected"><a href="#">ЖКХ (3)</a></li>
+                <li><a href="#">Бизнес-консалтинг (1)</a></li>
+                <li><a href="#">Биотехнологии и медицина (25)</a></li>
+              </ul>
             </div>
-            <div class="ball"><a href="#">Все оборудование</a></div>
-          </div>
-          <div class="box-news box-right box-news_dotted">
-            <div class="bname">
-              <h3> <a href="#">Популярные услуги</a></h3>
-            </div>
-            <div class="bcon">
-              <div class="item">
-                <div class="iname"> <a href="#">Выставка научного оборудования НИИ спорта РГУФКСМиТ</a></div>
-                <div class="irating irating_margin2">
-                  <ul>
-                    <li class="star"></li>
-                    <li class="star"></li>
-                    <li class="star"></li>
-                    <li></li>
-                    <li></li>
-                  </ul>
-                </div>
-                <div class="itext">10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования. <br></div>
-                <div class="itext-ext"><span class="dark">Организация (ВУЗ / ГНЦ): </span><a href="#">Национальный исследовательский Томский политехнический университет</a></div>
-                <div class="tags"><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Металлообработка</span><span class="count empty"></span></a></div>
-              </div>
-              <div class="item">
-                <div class="iname"> <a href="#">Станок токарный с ЧПУ</a></div>
-                <div class="itext">Микроскопия, анализ химического состава</div>
-                <div class="irating irating_margin2">
-                  <ul>
-                    <li class="star"></li>
-                    <li class="star"></li>
-                    <li class="star"></li>
-                    <li></li>
-                    <li></li>
-                  </ul>
-                </div>
-                <div class="itext">10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования. <br></div>
-                <div class="itext-ext"><span class="dark"> Организация: </span><span class="grey">(ВУЗ / ГНЦ): </span><a href="#">Национальный исследовательский Томский политехнический университет</a></div>
-                <div class="tags"><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Металлообработка</span><span class="count empty"></span></a></div>
-              </div>
-            </div>
-            <div class="ball"><a href="#">Все оборудование</a></div>
           </div>
           <div class="box-support">
             <div class="bcon">
