--- a/site/notify.html
+++ b/site/notify.html
@@ -377,301 +377,58 @@
       <div class="main-width main-wrap">
         <div class="pathway">
           <ul>
-            <li><a href="#">События</a></li>
-            <li>></li>
-            <li><a href="#">ОБОРУДОВАНИЕ</a></li>
-            <li>></li>
-            <li>Станок токарный с ЧПУ</li>
+            <li><a href="#">Уведомления</a></li>
           </ul>
         </div>
-        <div class="main-left">
-          <div class="box-text-item">
-            <div class="bmeta">
-              <div class="date">19 сентября 2014 года</div>
-              <div class="comments"><a href="#">61</a></div>
-              <div class="views">2726</div>
-            </div>
-            <div class="bcon bcon-text-style">
-              <div class="event-item mar-bot-30">
-                <div class="icon">
-                  <h1>ЗАО «Научно-производственный центр “Модуль”»</h1>
-                  <div class="graph-name">Рейтинг НТП 73 %</div>
-                  <div class="graph-box graph-box_mwidth">
-                    <div style="width:73%;" class="graph-inner"></div>
-                  </div>
-                  <div class="irating irating_margin">
-                    <ul>
-                      <li class="star"></li>
-                      <li class="star"></li>
-                      <li class="star"></li>
-                      <li class="star"></li>
-                      <li></li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="iprev"><img src="img/content/120-85-1.jpg" alt=""></div>
-                <p class="grey">
-                  Оборудование: 78% <br>
-                  Услуги: 67% <br>
-                  Программное обеспечние: 68% <br> 
-                  Результаты интеллектуальной деятельности: 64% <br>
-                </p>
-                <p><strong>Вид деятельности: </strong>проведение исследований, измерение <br><strong>Расположение: </strong>Московская область, Протвино <br><strong>Контакты: </strong>email@email.com, +7 495 675 87 98</p>
-                <div class="inline"><a href="#" class="btn-orange btn-orange-bigm">Свзяаться</a></div>
+        <div class="main-full">
+          <div class="notifybox">
+            <div class="notify">
+              <div class="notify-prev"><img src="img/content/edit-page/1.png" alt=""></div>
+              <div class="notify-meta"> 
+                <div class="date">13 октября 2014</div>
+                <div class="text"> <a href="#">Газпром Инжиниринг </a>откликнулся на ваше предложение <a>Разработка систем диспетчерского контроля и управления</a></div>
+                <div class="cat">в разделе «Программное обеспечение»</div>
               </div>
             </div>
-            <div class="bmetabot">
-              <div class="share"><span>Поделиться</span>
-                <ul>
-                  <li class="vk"><a href="#"></a></li>
-                  <li class="fb"><a href="#"></a></li>
-                  <li class="tw"><a href="#"></a></li>
-                  <li class="in"><a href="#"></a></li>
-                </ul>
-              </div>
-              <div class="comments-count"><a href="#" class="btn-grey">19 комментариев</a></div>
-            </div>
-            <div class="box-interest">
-              <div class="bname">
-                <h3>Похожие рекомендации</h3>
-              </div>
-              <div class="bcon">
-                <div class="box-articles m-mod">
-                  <div class="item-3col">
-                    <div class="iprev"><img src="img/content/120-85-2.jpg" alt=""></div>
-                    <div class="icon">
-                      <div class="iname"><a href="#">Московский государственный университет им. М.В.Ломоносова</a></div>
-                      <div class="itext lh-small">
-                        <p>
-                          Оборудование: 78% <br>
-                          Услуги: 67% <br>
-                          Программное обеспечние: 68% <br> 
-                          Результаты интеллектуальной деятельности: 64% <br>
-                        </p><a href="#" class="btn-orange-empty">Связаться</a>
-                      </div>
-                    </div>
-                    <div class="iconright">
-                      <div class="graph-name">Рейтинг НТП 98 %</div>
-                      <div class="graph-box">
-                        <div style="width:98%;" class="graph-inner"></div>
-                      </div>
-                      <div class="irating irating_margin">
-                        <ul>
-                          <li class="star"></li>
-                          <li class="star"></li>
-                          <li class="star"></li>
-                          <li></li>
-                          <li></li>
-                        </ul>
-                      </div>
-                      <div class="imeta">
-                        <div class="comments"><a href="#">51</a></div>
-                        <div class="views"><a href="#">225</a></div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="item-3col">
-                    <div class="iprev"><img src="img/content/120-85-1.jpg" alt=""></div>
-                    <div class="icon">
-                      <div class="iname"><a href="#">Санкт-Петербургский государственный университет аэрокосмического приборостроения</a></div>
-                      <div class="itext lh-small">
-                        <p>
-                          Оборудование: 78% <br>
-                          Услуги: 67% <br>
-                          Программное обеспечние: 68% <br> 
-                          Результаты интеллектуальной деятельности: 64% <br>
-                        </p><a href="#" class="btn-orange-empty">Связаться</a>
-                      </div>
-                    </div>
-                    <div class="iconright">
-                      <div class="graph-name">Рейтинг НТП 53 %</div>
-                      <div class="graph-box">
-                        <div style="width:53%;" class="graph-inner"></div>
-                      </div>
-                      <div class="irating irating_margin">
-                        <ul>
-                          <li class="star"></li>
-                          <li class="star"></li>
-                          <li class="star"></li>
-                          <li></li>
-                          <li></li>
-                        </ul>
-                      </div>
-                      <div class="imeta">
-                        <div class="comments"><a href="#">51</a></div>
-                        <div class="views"><a href="#">225</a></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+            <div class="notify">
+              <div class="notify-prev"><img src="img/content/edit-page/2.png" alt=""></div>
+              <div class="notify-meta"> 
+                <div class="date">13 октября 2014</div>
+                <div class="text"> <a href="#">Газпром Инжиниринг </a>откликнулся на ваше предложение <a>Разработка систем диспетчерского контроля и управления</a></div>
+                <div class="cat">в разделе «Программное обеспечение»</div>
               </div>
             </div>
-            <div class="box-comments">
-              <div class="bwrite">
-                <div class="bname">
-                  <h3>Обсуждаем станок токарный с чпу</h3><a href="#enter-popup">Войти</a>
-                </div>
-                <div class="bcon">
-                  <div class="ava"><img src="img/ava.png" alt=""></div>
-                  <div class="text">
-                    <textarea placeholder=""></textarea>
-                  </div>
-                  <div class="action"><a href="#" class="btn-orange">Оставить комментарий</a></div>
-                </div>
-              </div>
-              <div class="bcomments">
-                <div class="comment">
-                  <div class="cprev"><a href="#"> <img src="img/content/ava-2.jpg" alt=""></a></div>
-                  <div class="ccon">
-                    <div class="name"><a href="#">Konrad Karlovich</a>
-                      <div class="date">1 час назад</div>
-                    </div>
-                    <div class="text">Я эту штуку не куплю. Работаю с Microsoft Office -- он умнее, чем я.</div>
-                    <div class="answer"><a href="#">Ответить</a></div>
-                  </div>
-                  <div class="comment">
-                    <div class="cprev"><a href="#"> <img src="img/content/ava-2.jpg" alt=""></a></div>
-                    <div class="ccon">
-                      <div class="name"><a href="#">Konrad Karlovich</a>
-                        <div class="pep">
-                           
-                           > <a href="#">Влодко Чорный</a>
-                        </div>
-                        <div class="date">1 час назад</div>
-                      </div>
-                      <div class="text">Кто вам сказал, что Surface 2 провал? Вполне нормально берут, конкурентов с таким функционалом просто нет в этом сегменте.</div>
-                      <div class="answer"><a href="#">Ответить</a></div>
-                    </div>
-                    <div class="comment">
-                      <div class="cprev"><a href="#"> <img src="img/ava.png" alt=""></a></div>
-                      <div class="ccon">
-                        <div class="name"><a href="#">Konrad Karlovich</a>
-                          <div class="date">1 час назад</div>
-                        </div>
-                        <div class="text">Из всего перечня именитых контор Мелкомягкие дали фору абсолютно всем, посмотрели на представленный продукт.</div>
-                        <div class="answer"><a href="#">Ответить</a></div>
-                      </div>
-                      <div class="comment">
-                        <div class="cprev"><a href="#"> <img src="img/content/ava-1.png" alt=""></a></div>
-                        <div class="ccon">
-                          <div class="name"><a href="#">Konrad Karlovich</a>
-                            <div class="date">1 час назад</div>
-                          </div>
-                          <div class="text">Кто вам сказал, что Surface 2 провал? Вполне нормально берут, конкурентов с таким функционалом просто нет в этом сегменте.</div>
-                          <div class="answer"><a href="#">Ответить</a></div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="comment">
-                  <div class="cprev"><a href="#"> <img src="img/ava.png" alt=""></a></div>
-                  <div class="ccon">
-                    <div class="name"><a href="#">Konrad Karlovich</a>
-                      <div class="date">1 час назад</div>
-                    </div>
-                    <div class="text">Из всего перечня именитых контор Мелкомягкие дали фору абсолютно всем, посмотрели на представленный продукт.</div>
-                    <div class="answer"><a href="#">Ответить</a></div>
-                  </div>
-                </div>
-                <div class="comment">
-                  <div class="cprev"><a href="#"> <img src="img/content/ava-1.png" alt=""></a></div>
-                  <div class="ccon">
-                    <div class="name"><a href="#">Konrad Karlovich</a>
-                      <div class="date">1 час назад</div>
-                    </div>
-                    <div class="text">Кто вам сказал, что Surface 2 провал? Вполне нормально берут, конкурентов с таким функционалом просто нет в этом сегменте.</div>
-                    <div class="answer"><a href="#">Ответить</a></div>
-                  </div>
-                </div>
+            <div class="notify">
+              <div class="notify-prev"><img src="img/content/edit-page/1.png" alt=""></div>
+              <div class="notify-meta"> 
+                <div class="date">13 октября 2014</div>
+                <div class="text"> <a href="#">Газпром Инжиниринг </a>откликнулся на ваше предложение <a>Разработка систем диспетчерского контроля и управления</a></div>
+                <div class="cat">в разделе «Программное обеспечение»</div>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="main-right">
-          <div class="box-news box-right box-news_dotted">
-            <div class="bname">
-              <h3> <a href="#">Популярное оборудование</a></h3>
-            </div>
-            <div class="bcon">
-              <div class="item">
-                <div class="iname"> <a href="#">Выставка научного оборудования НИИ спорта РГУФКСМиТ</a></div>
-                <div class="irating mar-bot-10"><span>EBV-23</span>
-                  <ul>
-                    <li class="star"></li>
-                    <li class="star"></li>
-                    <li class="star"></li>
-                    <li></li>
-                    <li></li>
-                  </ul>
-                </div>
-                <div class="itext">10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования. <br></div>
-                <div class="itext-ext"><span class="dark">Организация (ВУЗ / ГНЦ): </span><a href="#">Национальный исследовательский Томский политехнический университет</a></div>
-                <div class="tags"><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Металлообработка</span><span class="count empty"></span></a></div>
-              </div>
-              <div class="item">
-                <div class="iprev"><img src="img/content/equip-2.jpg" alt=""></div>
-                <div class="iname"> <a href="#">Станок токарный с ЧПУ</a></div>
-                <div class="irating mar-bot-10"><span>EBV-23</span>
-                  <ul>
-                    <li class="star"></li>
-                    <li class="star"></li>
-                    <li class="star"></li>
-                    <li></li>
-                    <li></li>
-                  </ul>
-                </div>
-                <div class="itext">10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования. <br></div>
-                <div class="itext-ext"><span class="dark">Организация (ВУЗ / ГНЦ): </span><a href="#">Национальный исследовательский Томский политехнический университет</a></div>
-                <div class="tags"><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Металлообработка</span><span class="count empty"></span></a></div>
+            <div class="notify">
+              <div class="notify-prev"><img src="img/content/edit-page/2.png" alt=""></div>
+              <div class="notify-meta"> 
+                <div class="date">13 октября 2014</div>
+                <div class="text"> <a href="#">Газпром Инжиниринг </a>откликнулся на ваше предложение <a>Разработка систем диспетчерского контроля и управления</a></div>
+                <div class="cat">в разделе «Программное обеспечение» </div>
               </div>
             </div>
-            <div class="ball"><a href="#">Все оборудование</a></div>
-          </div>
-          <div class="box-news box-right box-news_dotted">
-            <div class="bname">
-              <h3> <a href="#">Популярные услуги</a></h3>
-            </div>
-            <div class="bcon">
-              <div class="item">
-                <div class="iname"> <a href="#">Выставка научного оборудования НИИ спорта РГУФКСМиТ</a></div>
-                <div class="irating irating_margin2">
-                  <ul>
-                    <li class="star"></li>
-                    <li class="star"></li>
-                    <li class="star"></li>
-                    <li></li>
-                    <li></li>
-                  </ul>
-                </div>
-                <div class="itext">10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования. <br></div>
-                <div class="itext-ext"><span class="dark">Организация (ВУЗ / ГНЦ): </span><a href="#">Национальный исследовательский Томский политехнический университет</a></div>
-                <div class="tags"><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Металлообработка</span><span class="count empty"></span></a></div>
-              </div>
-              <div class="item">
-                <div class="iname"> <a href="#">Станок токарный с ЧПУ</a></div>
-                <div class="itext">Микроскопия, анализ химического состава</div>
-                <div class="irating irating_margin2">
-                  <ul>
-                    <li class="star"></li>
-                    <li class="star"></li>
-                    <li class="star"></li>
-                    <li></li>
-                    <li></li>
-                  </ul>
-                </div>
-                <div class="itext">10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования. <br></div>
-                <div class="itext-ext"><span class="dark"> Организация: </span><span class="grey">(ВУЗ / ГНЦ): </span><a href="#">Национальный исследовательский Томский политехнический университет</a></div>
-                <div class="tags"><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Металлообработка</span><span class="count empty"></span></a></div>
+            <div class="notify">
+              <div class="notify-prev"><img src="img/content/edit-page/1.png" alt=""></div>
+              <div class="notify-meta"> 
+                <div class="date">13 октября 2014</div>
+                <div class="text"> <a href="#">Газпром Инжиниринг </a>откликнулся на ваше предложение <a>Разработка систем диспетчерского контроля и управления</a></div>
+                <div class="cat">в разделе «Программное обеспечение»</div>
               </div>
             </div>
-            <div class="ball"><a href="#">Все оборудование</a></div>
-          </div>
-          <div class="box-support">
-            <div class="bcon">
-              <div class="item"><a href="#"> <img src="img/content/logo-minprom.png" alt=""></a></div>
-              <div class="item"><a href="#"> <img src="img/content/logo-smr.png" alt=""></a></div>
-              <div class="item"><a href="#"> <img src="img/content/logo-ibs.png" alt=""></a></div>
+            <div class="notify">
+              <div class="notify-prev"><img src="img/content/edit-page/2.png" alt=""></div>
+              <div class="notify-meta"> 
+                <div class="date">13 октября 2014</div>
+                <div class="text"> <a href="#">Газпром Инжиниринг </a>откликнулся на ваше предложение <a>Разработка систем диспетчерского контроля и управления</a></div>
+                <div class="cat">в разделе «Программное обеспечение»</div>
+              </div>
             </div>
           </div>
         </div>
