upd equipments-item-user orders

--- a/site/equipments-item-user.html
+++ b/site/equipments-item-user.html
@@ -386,7 +386,27 @@
         </div>
         <div class="main-left">
           <div class="box-text-item">
+            <div class="orders-box js-orders-pop">
+              <h3 class="bname">Заказывали недавно</h3>
+              <div class="order-count"> <i>2</i></div>
+              <div class="order-item is-active">
+                <div class="order-date">13 октября 2012</div>
+                <div class="order-meta">
+                  <div class="text">Поволжский государственный технологический университет</div>
+                  <div class="contacts"> <span>Контакты: </span>email@email.com, +7 495 675 87 98</div>
+                </div>
+              </div>
+              <div class="order-item">
+                <div class="order-date">13 октября 2012</div>
+                <div class="order-meta">
+                  <div class="text">Поволжский государственный технологический университет</div>
+                  <div class="contacts"> <span>Контакты: </span>email@email.com, +7 495 675 87 98</div>
+                </div>
+              </div>
+              <div class="show-all"><a href="#">История заказов</a></div>
+            </div>
             <ul class="admin-box">
+              <li class="admin-orders js-show-orders"></li>
               <li class="admin-edit"></li>
               <li class="admin-delete"></li>
             </ul>
